--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,13 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest -i --passWithNoTests"
   },
   "dependencies": {
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "jest": "^27.2.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
