--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,20 +1,20 @@
-- name: Super-Linter
-  on: push
+name: Super-Linter
+on: push
 
-  jobs:
+jobs:
 
-  - super-lint:
+  super-lint:
     name: Lint codebase
     runs-on: ubuntu-latest
     steps:
 
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Run superlinter
-      uses: github/superlinter@v3
+      - name: Run superlinter
+        uses: github/superlinter@v3
 
-    - env:
-      DEFAULT_BRANCH: main
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
