--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,5 +1,3 @@
----
-
 name: Lint Code Base
 
 on:
@@ -7,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  super-linter:
     name: Lint Code Base
     runs-on: ubuntu-latest
 
