--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,13 @@
     "jest": "^27.2.5",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.13",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "eslint": "^7.32.0"
   }
 }
