--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -13,8 +13,21 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Lint Code Base
-        uses: github/super-linter@v4
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up node 
+        uses: actions/setup-node@v1
+      
+      - name: Install dependencies
+        working-directory: ./backend
+        run: npm install
+
+      - name: Test Backend
+        working-directory: ./backend
+        run: npx eslint .
+
+      # - name: Install dependencies
+      #   working-directory: ./frontend
+      #   run: npm install
+
+      # - name: Test Frontend
+      #   working-directory: ./frontend
+      #   run: npx eslint .
