--- a/.github/workflows/lint-app.yml
+++ b/.github/workflows/lint-app.yml
@@ -1,4 +1,4 @@
-name: ESLint Frontend
+name: ESLint App
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   super-linter:
-    name: ESLint Frontend
+    name: ESLint App
     runs-on: ubuntu-latest
 
     steps:
@@ -20,6 +20,6 @@ jobs:
         working-directory: ./app
         run: npm install
 
-      - name: ESLint Frontend
+      - name: Run ESLint
         working-directory: ./app
         run: npx eslint .
