--- a/app/package.json
+++ b/app/package.json
@@ -9,13 +9,15 @@
     "test": "jest -i --passWithNoTests"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "jest": "^27.2.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-fontawesome": "^7.0.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12"
   },
